Bug 149710 - EDITING Track Changes: Writer does not show the change in number of deleted numbered paragraphs
Summary: EDITING Track Changes: Writer does not show the change in number of deleted n...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2
Keywords:
Depends on: 115523
Blocks: Track-Changes-Lists
  Show dependency treegraph
 
Reported: 2022-06-24 07:33 UTC by NISZ LibreOffice Team
Modified: 2022-07-01 10:47 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-06-24 07:33:25 UTC
Description:
Writer does not show the change in serial numbers in numbered lists when an item is deleted.

Steps to Reproduce:
1. Create a numbered list in LibreOffice Writer with 3 elements.
2. Record Track Changes. (Ctrl - Shift - E)
3. Delete the first list item

Actual Results:
Writer shows, that the second list item in Show Changes mode is still the second list item of the actual list.
Writer does not show serial number 2. instead of serial number 3 in the last item.
Writer does not show serial number 3, as the old (original) numbering of the last item.

Expected Results:
Show that the second list item is not the second one any more.
Show that the last item is the second list item now.
Show that the last item was the third list item previously.


Reproducible: Always


User Profile Reset: No



Additional Info:
Note:
Follow up to Bug 115523.

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1eaf11278a2f2f81fbff774fef73f72a6b1a4efb
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 Commit Notification 2022-06-24 15:33:40 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4430bf8f97b1438252dc494cae89863d24469d2b

tdf#149710 sw_redlinenum: update numbering at deletion

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2022-06-24 19:15:44 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/d3b0fb222f96964d7bd2b82fe20e1547f731b7a6

tdf#149710 sw_redlinenum: update numbering at deletion

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2022-06-28 08:50:33 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 415dc3bb1c03dbdbc3cbca274bc435ac7557ba2d
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL