tdf#149710 sw_redlinenum: update numbering at deletion

in Show Changes mode.

Follow-up to commit 2413f213625253a9c2b1787b3b9fe859d724a9bd
"tdf#115523 sw_redlinenum: show correct, also original numbering".

Change-Id: Iebf54775f3850e668ac5b12ecbd9f010b4e93ee4